# promptlint

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  README.md  docker-compose.test.yml  pyproject.toml
.claude/agents/: spec-develop.md
.claude/commands/: integration-test.md
.claude/skills/: architect.md  code-review.md  spec-review.md  test-coverage.md  test-rules.md
.github/workflows/: post-merge.yml  pr-review.yml
examples/: promptlint.yaml
fixtures/bench_corpus/: coding-assistant.md  complex-system.md  support-agent.md
scripts/hooks/: pre-push
specs/: 01-core-pipeline.md  02-pipeline-dsl.md  03-storage-backends.md  04-gateway-integration.md  05-orchestrator-support.md  06-configuration.md  07-benchmarks.md  08-orchestrator-plugins.md  09-linting-rules.md  10-positional-attention.md  11-orchestrator-codex-cli.md  12-orchestrator-opencode.md  13-per-source-metrics.md  14-incremental-analysis-cache.md  README.md
src/promptlint/: __init__.py  benchmark.py  chunker.py  classifier.py  cli.py  config.py  config_loader.py  contradiction.py  embedder.py  models.py  pipeline.py  pipeline_config.py  prompt_parser.py  proxy.py  redundancy.py  scorer.py
src/promptlint/emitters/: __init__.py  elasticsearch.py  jsonl.py  prometheus.py  sqlite.py  webhook.py
src/promptlint/gateways/: __init__.py  normalizer.py  proxy.py  sdk_middleware.py
tests/: conftest.py  test_benchmark.py  test_builtin_proxy.py  test_chunker.py  test_classifier.py  test_cli_test_backends.py  test_config_loader.py  test_contradiction.py  test_emitter_elasticsearch.py  test_emitter_jsonl.py  test_emitter_prometheus.py  test_emitter_sqlite.py  test_emitter_webhook.py  test_emitters_init.py  test_gateway.py  test_integration.py  test_normalizer.py  test_orchestrator_claude_code.py  test_orchestrator_envelope.py  test_orchestrator_generic.py  test_orchestrators_init.py  test_pipeline.py  test_pipeline_config.py  test_redundancy.py  test_scorer.py  test_sdk_middleware.py
tests/fixtures/: claude_md_sample.md  contradictory.txt  simple_prompt.txt
tests/integration/: test_elasticsearch.py  test_prometheus.py  test_proxy.py  test_webhook.py
(+4 files in other folders)
